--- a/scss/shirt.scss
+++ b/scss/shirt.scss
@@ -43,6 +43,10 @@
                     cursor: pointer;
                 }
             }
+            p{
+                font-size: 3rem;
+                color: lime;
+            }
         }
     }
 }
